src/snapshots/rust_aidl__parser__tests__interface_with_javadoc.snap
---
source: src/parser.rs
expression: res

---
Interface(
  name: "Potato",
  elements: [],
  annotations: [],
  doc: Some("Interface documentation"),
  full_range: "...",
  symbol_range: "...",
)
