src/snapshots/rust_aidl__parser__tests__member_with_javadoc.snap
---
source: src/parser.rs
expression: res

---
Member(
  name: "memberName",
  member_type: Type(
    name: "TypeName",
    kind: Custom,
    generic_types: [],
    definition: None,
    symbol_range: "...",
  ),
  value: None,
  symbol_range: "...",
  doc: Some("Member documentation"),
  annotations: [],
  full_range: "...",
)
