src/snapshots/rust_aidl__parser__tests__method_arg_with_direction.snap
---
source: src/parser.rs
expression: res

---
Arg(
  direction: In,
  name: None,
  arg_type: Type(
    name: "TypeName",
    kind: Custom,
    generic_types: [],
    definition: None,
    symbol_range: "...",
  ),
  doc: None,
  annotations: [],
)
