src/snapshots/rust_aidl__parser__tests__method_arg_with_direction_and_name.snap
---
source: src/parser.rs
expression: res

---
Arg(
  direction: Out,
  name: Some("roger"),
  arg_type: Type(
    name: "TypeName",
    kind: Custom,
    generic_types: [],
    definition: None,
    symbol_range: "...",
  ),
  doc: None,
  annotations: [],
)
